Changing mode line to have a bg

--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,15 @@
 .DS_STORE
 private
-elpa/
-tramp
-recentf
 eshell/history
 eshell/lastdir
-auto-save-list/
+tramp
+recentf
 flycheck_*
 projectile-bookmarks.eld
+projectile.cache
 .mc-lists.el
+auto-save-list/
 games/
+elpa/
 url/
 var/
