--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,4 @@
-.DS_STORE
-emacs.el
-private
-private.org
-private.el
-env-path
-env-vars
-eshell/
-tramp
-recentf
-flycheck_*
-projectile-bookmarks.eld
-projectile.cache
-.mc-lists.el
-completer.hist
-auto-save-list/
-games/
-elpa/
-url/
-var/
-.sx/
+*
+!.gitignore
+!emacs.org
+!init.el
